objects/Budget_Line__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Q1_Next_Year__c</fullName>
        <formula>IF( 
TEXT(YEAR(TODAY () + 364)) = Year__c &amp;&amp; Quarter__c = &quot;Q1&quot;, 
Amount__c , 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Q1 Next Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Q1_This_Year__c</fullName>
        <formula>IF(
TEXT(YEAR(TODAY())) =  Year__c &amp;&amp; Quarter__c = &quot;Q1&quot;,
 Amount__c , 0
)</formula>
        <label>Amount Q1 This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Q2_Next_Year__c</fullName>
        <formula>IF( 
TEXT(YEAR(TODAY () + 364)) = Year__c &amp;&amp; Quarter__c = &quot;Q2&quot;, 
Amount__c , 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Q2 Next Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Q2_This_Year__c</fullName>
        <formula>IF( 
TEXT(YEAR(TODAY())) = Year__c &amp;&amp; Quarter__c = &quot;Q2&quot;, 
Amount__c , 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Q2 This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Q3_Next_Year__c</fullName>
        <formula>IF( 
TEXT(YEAR(TODAY () + 364)) = Year__c &amp;&amp; Quarter__c = &quot;Q3&quot;, 
Amount__c , 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Q3 Next Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Q3_This_Year__c</fullName>
        <formula>IF( 
TEXT(YEAR(TODAY())) = Year__c &amp;&amp; Quarter__c = &quot;Q3&quot;, 
Amount__c , 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Q3 This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Budget Lines</relationshipLabel>
        <relationshipName>Budget_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>CASE(
Month__c,
&quot;Jan&quot;, &quot;Q1&quot;,
&quot;Feb&quot;, &quot;Q1&quot;,
&quot;Mar&quot;, &quot;Q1&quot;,
&quot;Apr&quot;, &quot;Q2&quot;,
&quot;May&quot;, &quot;Q2&quot;,
&quot;Jun&quot;, &quot;Q2&quot;,
&quot;Jul&quot;, &quot;Q3&quot;,
&quot;Aug&quot;, &quot;Q3&quot;,
&quot;Sep&quot;, &quot;Q3&quot;,
&quot;Oct&quot;, &quot;Q4&quot;,
&quot;Nov&quot;, &quot;Q4&quot;,
&quot;Dec&quot;, &quot;Q4&quot;,
&quot; &quot;)</formula>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <externalId>true</externalId>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Budget Line</label>
    <nameField>
        <displayFormat>BL{000000}</displayFormat>
        <label>Budget Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>